--- a/app/views/login.xml
+++ b/app/views/login.xml
@@ -2,8 +2,8 @@
 	<Window id="login" title="Login" class="container">
 		<View id="main" layout="vertical" height="95%">
 			<ImageView width="50%" height="Ti.UI.SIZE" backgroundColor="#ff0000" bottom="50dp" top="50dp" image="appicon-76@2x.png"></ImageView>
-			<TextField id="username" hintText="Enter Username"/>
-			<TextField id="password" hintText="Enter Password" />
+			<TextField id="username" hintText="Enter Username" value="wongmy@demo.com" />
+			<TextField id="password" hintText="Enter Password" value="pass1234" />
 			<Button id="loginAccountButton" borderRadius="15" backgroundColor="#CC2228" onTouchend="doLogin" title="Login"  width="90%" top="20" height="60" color="#ffffff" />
 			<!--<Label class="ftText" onTouchend="doForgotPassword" left="15">Forgot your password?</Label>-->
 			
