--- a/app/views/login.xml
+++ b/app/views/login.xml
@@ -1,15 +1,17 @@
 <Alloy>
-	<Window navTintColor="#CE1D1C" id="login" title="Login" class="container">
-		<View id="main" layout="vertical" height="95%">
-			<ImageView width="50%" height="Ti.UI.SIZE" backgroundColor="#ff0000" bottom="50dp" top="50dp" image="appicon-76@2x.png"></ImageView>
-			<TextField id="username" hintText="Enter Username" value="wongmy@demo.com" />
-			<TextField id="password" hintText="Enter Password" value="pass1234" />
-			<Button id="loginAccountButton" borderRadius="15" backgroundColor="#CC2228" onTouchend="doLogin" title="Login"  width="90%" top="20" height="60" color="#ffffff" />
-			<!--<Label class="ftText" onTouchend="doForgotPassword" left="15">Forgot your password?</Label>-->
-			
-           
-            <!--<Button id="createAccountButton" onTouchend="goCreateAccount" title="Create an account" width="90%" height="50" color="#ffffff" />
-          -->
+	<Window navTintColor="#CE1D1C" id="login" title="Login" id="loginWin" class="container">
+		<View>
+        	<View layout="vertical" id="loadingBar" height="0" width="120" borderRadius="15"  backgroundColor="#2E2E2E" >
+		        <ActivityIndicator  id="activityIndicator" />
+		    	<Label top="5" text="Loading" color="#ffffff" />
+		    </View>
+			<ScrollView id="main" layout="vertical" height="95%">
+				<ImageView width="50%" height="Ti.UI.SIZE" backgroundColor="#ff0000" bottom="50dp" top="50dp" image="appicon-76@2x.png"></ImageView>
+				<TextField id="username" hintText="Enter Username" value="wongmy@demo.com" />
+				<TextField id="password" hintText="Enter Password" value="pass1234" />
+				<Button id="loginAccountButton" borderRadius="15" backgroundColor="#CC2228" onTouchend="doLogin" title="Login"  width="90%" top="20" height="60" color="#ffffff" />
+				 
+			</ScrollView>
 		</View>
 		<View id="footer" layout="horizontal">
 			 <Label class="ftText">ASPplux</Label>
