--- a/app/views/healthInfo.xml
+++ b/app/views/healthInfo.xml
@@ -1,145 +1,10 @@
 <Alloy>
 	<Window title="Health Info" backButtonTitle="" class="container" navTintColor="#CE1D1C" platform="ios">
 		<View id="main">
-			<ScrollView layout="vertical" width="Ti.UI.FILL" contentWidth="Ti.UI.FILL" contentHeight="auto">
-				
-				<View class="cat">
-					<View class="cat_header">
-						<Label class="cat_title">Bone Health</Label>
-					</View>
-					<ScrollView class="news_container" layout="horizontal" contentWidth="auto">
-						<View class="news" onClick="callNav" mod="Bone Health">
-							<ImageView mod="Bone Health" class="news_thumbnail" image="/images/bone-health-thumb.png"></ImageView>
-							<Label mod="Bone Health" class="news_desc">Bone Health For Life</Label>
-						</View>
-						<View class="news" mod="Bone Health" onClick="callNav">
-							<ImageView mod="Bone Health" class="news_thumbnail" image="/images/bone-health-thumb.png"></ImageView>
-							<Label mod="Bone Health" class="news_desc">11 Foods for Healthy Bones</Label>
-						</View>
-						<View class="news" mod="Bone Health" onClick="callNav">
-							<ImageView mod="Bone Health" class="news_thumbnail" image="/images/bone-health-thumb.png"></ImageView>
-							<Label mod="Bone Health" class="news_desc">10 Ways to Build Healthy Bones</Label>
-						</View>
-						<View class="news" mod="Bone Health" onClick="callNav">
-							<ImageView mod="Bone Health" class="news_thumbnail" image="/images/bone-health-thumb.png"></ImageView>
-							<Label mod="Bone Health" class="news_desc">Bone Health For Life</Label>
-						</View>
-						<View class="news" mod="Bone Health" onClick="callNav">
-							<ImageView mod="Bone Health" class="news_thumbnail" image="/images/bone-health-thumb.png"></ImageView>
-							<Label mod="Bone Health" class="news_desc">11 Foods for Healthy Bones</Label>
-						</View>
-						<View class="news" mod="Bone Health" onClick="callNav">
-							<ImageView mod="Bone Health" class="news_thumbnail" image="/images/bone-health-thumb.png"></ImageView>
-							<Label mod="Bone Health" class="news_desc">10 Ways to Build Healthy Bones</Label>
-						</View>
-					</ScrollView>
-				</View>
-				<View class="cat">
-					<View class="cat_header">
-						<Label class="cat_title">Hearth Health</Label>
-					</View>
-					<ScrollView class="news_container" layout="horizontal" contentWidth="auto">
-						<View class="news" mod="Hearth Health" onClick="callNav">
-							<ImageView mod="Hearth Health" class="news_thumbnail" image="/images/bone-health-thumb.png"></ImageView>
-							<Label mod="Hearth Health" class="news_desc">18 Superfoods For Your Heart</Label>
-						</View>
-						<View class="news" mod="Hearth Health" onClick="callNav">
-							<ImageView mod="Hearth Health" class="news_thumbnail" image="/images/bone-health-thumb.png"></ImageView>
-							<Label mod="Hearth Health" class="news_desc">Top Heart-Healthy Foods</Label>
-						</View>
-						<View class="news" mod="Hearth Health" onClick="callNav">
-							<ImageView mod="Hearth Health" class="news_thumbnail" image="/images/bone-health-thumb.png"></ImageView>
-							<Label mod="Hearth Health" class="news_desc">WebMD Heart Health Center</Label>
-						</View>
-						<View class="news" mod="Hearth Health" onClick="callNav">
-							<ImageView mod="Hearth Health" class="news_thumbnail" image="/images/bone-health-thumb.png"></ImageView>
-							<Label mod="Hearth Health" class="news_desc">18 Superfoods For Your Heart</Label>
-						</View>
-						<View class="news" mod="Hearth Health" onClick="callNav">
-							<ImageView mod="Hearth Health" class="news_thumbnail" image="/images/bone-health-thumb.png"></ImageView>
-							<Label mod="Hearth Health" class="news_desc">Top Heart-Healthy Foods</Label>
-						</View>
-					</ScrollView>
-				</View>
-				<View class="cat">
-					<View class="cat_header">
-						<Label class="cat_title">Children Health</Label>
-					</View>
-					<ScrollView class="news_container" layout="horizontal" contentWidth="auto">
-						<View class="news" mod="Children Health" onClick="callNav">
-							<ImageView mod="Children Health" class="news_thumbnail" image="/images/bone-health-thumb.png"></ImageView>
-							<Label mod="Children Health" class="news_desc">Courts guarantee children's health</Label>
-						</View>
-						<View class="news" mod="Children Health" onClick="callNav">
-							<ImageView mod="Children Health" class="news_thumbnail" image="/images/bone-health-thumb.png"></ImageView>
-							<Label mod="Children Health" class="news_desc">Courts guarantee children's health</Label>
-						</View>
-						<View class="news" mod="Children Health" onClick="callNav">
-							<ImageView mod="Children Health" class="news_thumbnail" image="/images/bone-health-thumb.png"></ImageView>
-							<Label mod="Children Health" class="news_desc">Courts guarantee children's health</Label>
-						</View>
-						<View class="news" mod="Children Health" onClick="callNav">
-							<ImageView mod="Children Health" class="news_thumbnail" image="/images/bone-health-thumb.png"></ImageView>
-							<Label mod="Children Health" class="news_desc">Courts guarantee children's health</Label>
-						</View>
-						<View class="news" mod="Children Health" onClick="callNav">
-							<ImageView mod="Children Health" class="news_thumbnail" image="/images/bone-health-thumb.png"></ImageView>
-							<Label mod="Children Health" class="news_desc">Courts guarantee children's health</Label>
-						</View>
-					</ScrollView>
-				</View>
-				<View class="cat">
-					<View class="cat_header">
-						<Label class="cat_title">Men Health</Label>
-					</View>
-					<ScrollView class="news_container" layout="horizontal" contentWidth="auto">
-						<View class="news" mod="Men Health" onClick="callNav">
-							<ImageView mod="Men Health" class="news_thumbnail" image="/images/bone-health-thumb.png"></ImageView>
-							<Label mod="Men Health" class="news_desc">Courts guarantee Men's health</Label>
-						</View>
-						<View class="news" mod="Men Health" onClick="callNav">
-							<ImageView mod="Men Health" class="news_thumbnail" image="/images/bone-health-thumb.png"></ImageView>
-							<Label mod="Men Health" class="news_desc">Courts guarantee Men's health</Label>
-						</View>
-						<View class="news" mod="Men Health" onClick="callNav">
-							<ImageView mod="Men Health" class="news_thumbnail" image="/images/bone-health-thumb.png"></ImageView>
-							<Label mod="Men Health" class="news_desc">Courts guarantee Men's health</Label>
-						</View>
-						
-					</ScrollView>
-				</View>
-				<View class="cat">
-					<View class="cat_header">
-						<Label class="cat_title">Women Health</Label>
-					</View>
-					<ScrollView class="news_container" layout="horizontal" contentWidth="auto">
-						<View class="news" mod="Women Health" onClick="callNav">
-							<ImageView mod="Women Health" class="news_thumbnail" image="/images/bone-health-thumb.png"></ImageView>
-							<Label mod="Women Health" class="news_desc">Courts guarantee Women's health</Label>
-						</View>
-						<View class="news" mod="Women Health" onClick="callNav">
-							<ImageView mod="Women Health" class="news_thumbnail" image="/images/bone-health-thumb.png"></ImageView>
-							<Label mod="Women Health" class="news_desc">Courts guarantee Women's health</Label>
-						</View>
-						<View class="news" mod="Women Health" onClick="callNav">
-							<ImageView mod="Women Health" class="news_thumbnail" image="/images/bone-health-thumb.png"></ImageView>
-							<Label mod="Women Health" class="news_desc">Courts guarantee Women's health</Label>
-						</View>
-						<View class="news" mod="Women Health" onClick="callNav">
-							<ImageView mod="Women Health" class="news_thumbnail" image="/images/bone-health-thumb.png"></ImageView>
-							<Label mod="Women Health" class="news_desc">Courts guarantee Women's health</Label>
-						</View>
-						<View class="news" mod="Women Health" onClick="callNav">
-							<ImageView mod="Women Health" class="news_thumbnail" image="/images/bone-health-thumb.png"></ImageView>
-							<Label mod="Women Health" class="news_desc">Courts guarantee Women's health</Label>
-						</View>
-						<View class="news" mod="Women Health" onClick="callNav">
-							<ImageView mod="Women Health" class="news_thumbnail" image="/images/bone-health-thumb.png"></ImageView>
-							<Label mod="Women Health" class="news_desc">Courts guarantee Women's health</Label>
-						</View>
-					</ScrollView>
-				</View>
-			</ScrollView>
+		  	<TableView id="infoTable">
+	             
+	        </TableView>
+			 
 		</View>
 	</Window>
 </Alloy>
