--- a/app/views/news.xml
+++ b/app/views/news.xml
@@ -1,67 +1,22 @@
 <Alloy>
-	<Window title="Bone Health for Life" backButtonTitle="" id="news" class="container" navTintColor="#CE1D1C" platform="ios">
+	<Window title="" backButtonTitle="" id="news" class="container" navTintColor="#CE1D1C" platform="ios">
 		<View id="main">
-			<ScrollableView showPagingControl="true">
-				<ScrollView class="news_item" contentHeight="auto" contentWidth="Ti.UI.FILL">
-					<Label class="news_title">Bone Health for Life: Health Information Basics for You and Your Family</Label>
-					<ImageView id="pic" class="news_image" image="/images/bone-health-thumb.png"></ImageView>
-					<Label class="image_caption">here is image caption</Label>
-					<Label class="news_paragraph">Our bones support us and allow us to move. They protect our brain, heart, and other organs from injury. Our bones also store minerals such as calcium and phosphorous, which help keep our bones strong, and release them into the body when we need them for other uses.
+			<ScrollableView showPagingControl="false">
+				<ScrollView class="news_item" id="myContentView" contentHeight="auto" contentWidth="Ti.UI.FILL">
+					<Label class="news_title" id="newsTitle">Bone Health for Life: Health Information Basics for You and Your Family</Label>
+					<ImageView id="newsImage" class="news_image" image=""></ImageView>
+					<Label class="image_caption" id="newsDate"> </Label>
+					
+					<!--<Label class="news_paragraph">Our bones support us and allow us to move. They protect our brain, heart, and other organs from injury. Our bones also store minerals such as calcium and phosphorous, which help keep our bones strong, and release them into the body when we need them for other uses.
 						
 There are many things we can do to keep our bones healthy and strong. Eating foods rich in calcium and vitamin D, getting plenty of exercise, and having good health habits help keep our bones healthy.</Label>
 					<Label class="news_subtitle">Why Does Bone Health Matter?</Label>
 					<Label class="news_paragraph">But if we don’t eat right and don’t get enough of the right kinds of exercise, our bones can become weak and even break. Broken bones (called fractures) can be painful and sometimes need surgery to heal. They can also cause long-lasting health problems.
 						
 But the good news is that it is never too late to take care of your bones.</Label>
-				</ScrollView>
-				<ScrollView class="news_item" contentHeight="auto" contentWidth="Ti.UI.FILL">
-					<Label class="news_title">Bone Health for Life: Health Information Basics for You and Your Family</Label>
-					<ImageView class="news_image" image="/images/bone-health-thumb.png"></ImageView>
-					<Label class="image_caption">here is image caption</Label>
-					<Label class="news_paragraph">Our bones support us and allow us to move. They protect our brain, heart, and other organs from injury. Our bones also store minerals such as calcium and phosphorous, which help keep our bones strong, and release them into the body when we need them for other uses.
-						
-There are many things we can do to keep our bones healthy and strong. Eating foods rich in calcium and vitamin D, getting plenty of exercise, and having good health habits help keep our bones healthy.</Label>
-					<Label class="news_subtitle">Why Does Bone Health Matter?</Label>
-					<Label class="news_paragraph">But if we don’t eat right and don’t get enough of the right kinds of exercise, our bones can become weak and even break. Broken bones (called fractures) can be painful and sometimes need surgery to heal. They can also cause long-lasting health problems.
-						
-But the good news is that it is never too late to take care of your bones.</Label>
-				</ScrollView>
-				<ScrollView class="news_item" contentHeight="auto" contentWidth="Ti.UI.FILL">
-					<Label class="news_title">Bone Health for Life: Health Information Basics for You and Your Family</Label>
-					<ImageView class="news_image" image="/images/bone-health-thumb.png"></ImageView>
-					<Label class="image_caption">here is image caption</Label>
-					<Label class="news_paragraph">Our bones support us and allow us to move. They protect our brain, heart, and other organs from injury. Our bones also store minerals such as calcium and phosphorous, which help keep our bones strong, and release them into the body when we need them for other uses.
-						
-There are many things we can do to keep our bones healthy and strong. Eating foods rich in calcium and vitamin D, getting plenty of exercise, and having good health habits help keep our bones healthy.</Label>
-					<Label class="news_subtitle">Why Does Bone Health Matter?</Label>
-					<Label class="news_paragraph">But if we don’t eat right and don’t get enough of the right kinds of exercise, our bones can become weak and even break. Broken bones (called fractures) can be painful and sometimes need surgery to heal. They can also cause long-lasting health problems.
-						
-But the good news is that it is never too late to take care of your bones.</Label>
-				</ScrollView>
-				<ScrollView class="news_item" contentHeight="auto" contentWidth="Ti.UI.FILL">
-					<Label class="news_title">Bone Health for Life: Health Information Basics for You and Your Family</Label>
-					<ImageView class="news_image" image="/images/bone-health-thumb.png"></ImageView>
-					<Label class="image_caption">here is image caption</Label>
-					<Label class="news_paragraph">Our bones support us and allow us to move. They protect our brain, heart, and other organs from injury. Our bones also store minerals such as calcium and phosphorous, which help keep our bones strong, and release them into the body when we need them for other uses.
-						
-There are many things we can do to keep our bones healthy and strong. Eating foods rich in calcium and vitamin D, getting plenty of exercise, and having good health habits help keep our bones healthy.</Label>
-					<Label class="news_subtitle">Why Does Bone Health Matter?</Label>
-					<Label class="news_paragraph">But if we don’t eat right and don’t get enough of the right kinds of exercise, our bones can become weak and even break. Broken bones (called fractures) can be painful and sometimes need surgery to heal. They can also cause long-lasting health problems.
-						
-But the good news is that it is never too late to take care of your bones.</Label>
-				</ScrollView>
-				<ScrollView class="news_item" contentHeight="auto" contentWidth="Ti.UI.FILL">
-					<Label class="news_title">Bone Health for Life: Health Information Basics for You and Your Family</Label>
-					<ImageView class="news_image" image="/images/bone-health-thumb.png"></ImageView>
-					<Label class="image_caption">here is image caption</Label>
-					<Label class="news_paragraph">Our bones support us and allow us to move. They protect our brain, heart, and other organs from injury. Our bones also store minerals such as calcium and phosphorous, which help keep our bones strong, and release them into the body when we need them for other uses.
-						
-There are many things we can do to keep our bones healthy and strong. Eating foods rich in calcium and vitamin D, getting plenty of exercise, and having good health habits help keep our bones healthy.</Label>
-					<Label class="news_subtitle">Why Does Bone Health Matter?</Label>
-					<Label class="news_paragraph">But if we don’t eat right and don’t get enough of the right kinds of exercise, our bones can become weak and even break. Broken bones (called fractures) can be painful and sometimes need surgery to heal. They can also cause long-lasting health problems.
-						
-But the good news is that it is never too late to take care of your bones.</Label>
-				</ScrollView>
+-->
+				</ScrollView> 
+				
 			</ScrollableView>
 			
 		</View>
