--- a/app/views/clinicLocator.xml
+++ b/app/views/clinicLocator.xml
@@ -1,18 +1,17 @@
 <Alloy>
-	<Window title="Clinic Locator" backButtonTitle="" class="container" navTintColor="#CE1D1C" platform="ios" >
+	<Window title="Clinic Locator" id="win_map" backButtonTitle="" class="container" navTintColor="#CE1D1C" platform="ios" >
 		<RightNavButton platform=ios>
             <!--<Button title="List" onClick="listing" />-->
         </RightNavButton>
-		<View id="main">
-			<ImageView width="100%" height="100%" image="/dummy/dummy-home.jpg"/>
-		</View>
-		<View layout="vertical" id="loadingBar" height="120" width="120" borderRadius="15" top="100" backgroundColor="#2E2E2E" >
+		<!--<View layout="vertical" id="loadingBar" height="120" width="120" borderRadius="15" top="100" backgroundColor="#2E2E2E" >
         	<ActivityIndicator  id="activityIndicator" />
         	<Label top="5" text="Loading" color="#ffffff" />
-        </View>
-        <View id="mapview" ns="Alloy.Globals.Map"/>
+  </View>-->
+            <!-- Starting with Alloy 1.4.0, use the Annotation tag to define an annotation -->
+            <!-- Prior to Alloy 1.4.0, create annotations in the controller -->
+
 		<!--<View layout="vertical" class="nearbyView">
 		 	<ScrollView id="panelListTbl" layout="horizontal" height="100%" width="100%" >
 			</ScrollView>-->
 	</Window>
-</Alloy>=
+</Alloy>
