--- a/app/views/editMedical.xml
+++ b/app/views/editMedical.xml
@@ -1,15 +1,21 @@
 <Alloy>
-	<Window id="editRecWin" title="Edit Medical Record" backButtonTitle="" class="container" navTintColor="#CE1D1C" platform="ios">
+	<Window id="editRecWin" title="My Medical Record" backButtonTitle="" class="container" navTintColor="#CE1D1C" platform="ios">
+		<LeftNavButton>
+	        <View left=0 height="Ti.UI.SIZE">
+	         	<Button onClick="backAndSave" height="28" left=0 backgroundImage= "/images/btn-back.png" />
+	        </View>
+        </LeftNavButton>
 		<RightNavButton>
 	        <View>
-	         	<Button id="saveRecord" title="Save" />
+	         	<Button id="saveRecord" title="Done" />
 	        </View>
         </RightNavButton>
 	 
 	 	<View >
-			<ScrollView id="aView" height="Ti.UI.SIZE"  layout="vertical" bottom=5> 
-				<TextField top=5 bottom=5 id="titleRecord" height="25" hintText="Records title..." width="95%"/> 
-				<View height="1" width="100%" backgroundColor="#000000" top=5 bottom=5 />
+	 		<TextField top="0"  id="titleRecord" height="40" hintText="Records title..." width="95%"/> 
+			<View height="1" width="100%" backgroundColor="#CE1D1C" top=40 />
+			<ScrollView id="aView" top=42 height="Ti.UI.SIZE"  layout="vertical" bottom=90 > 
+				
 			 	<TextArea id="recordsTextArea"  color="#888" textAlign="left" value="" width="95%" height="100%" suppressReturn="false" >
 			 		<KeyboardToolbar>
 						<Toolbar>
@@ -22,8 +28,17 @@
 			 	</TextArea>
 			 	
 			</ScrollView> 
-			<View height="40" bottom=0 width="100%" backgroundColor="#EEEEEE">
-					<Button onClick="deleteRecord" backgroundImage="/images/btn-remove.png" textAlign="left" left="15" width="30" height="30"  />
+			<View bottom=40 height="Ti.UI.SIZE"  layout="horizontal" width="100%"  >
+				<ScrollView id="attachment" scrollType="horizontal" layout="horizontal" height="Ti.UI.SIZE" width="80%" /> 
+				<View width="auto" height="Ti.UI.SIZE" onClick="takePhoto" >
+					<View backgroundColor="#CE1D1C" height="50" width="Ti.UI.FILL" right=0 ><Label id="addLbl" color="#ffffff" text="+" /></View>
+				</View> 
+			</View>
+			<View height="40" layout="horizontal" bottom=0 width="100%" backgroundColor="#EEEEEE">
+				<Button onClick="deleteRecord" backgroundImage="/images/btn-remove.png" textAlign="left" left="15" width="30" height="30"  />
+				<View width="auto" height="Ti.UI.FILL">
+					<Label id="lastUpdated" textAlign="right" right=10></Label>
+				</View> 
 			</View>
 		</View>
 	</Window>
