--- a/app/views/clinicDetails.xml
+++ b/app/views/clinicDetails.xml
@@ -11,6 +11,7 @@
 		 	<Label id="clinicTel" class="clinic_address" top=10 bottom=10  />
 		 	<View height="1" backgroundColor="#CE1D1C" width="98%" top="10" />
 		 	<TableView id="healthTableData" height="Ti.UI.SIZE" width="100%" scrollable="false" >
+		 		<TableViewRow selectedBackgroundColor="#FFE1E1" color="#5E5E5E" onClick="direction2here" title="Direction To Here"   />
 				<TableViewRow selectedBackgroundColor="#FFE1E1" color="#5E5E5E" onClick="clickToCall" title="Call"   />
 	            <TableViewRow id="add2contact" selectedBackgroundColor="#FFE1E1" color="#5E5E5E" onClick="addToContact" title="Add To Contact"   />
 			</TableView>
