--- a/app/views/m_myMedical.xml
+++ b/app/views/m_myMedical.xml
@@ -12,7 +12,7 @@
 	        </View>
 			<View id="aView" height="Ti.UI.SIZE" top="0" layout="vertical"> 
 				<SearchBar tintColor="#CE1D1C"  id="searchItem" showCancel="true" text=""  top="0" height="50" hintText="Search medical data..." /> 
-			 	<ScrollView id="recordView" layout="horizontal" height="Ti.UI.SIZE" width="100%" >
+			 	<ScrollView id="recordView" layout="vertical" height="Ti.UI.SIZE" width="100%" >
 			 		<TableView width="100%"  id="recordTable"  top=0  separatorColor="#375540" />
 			 	</ScrollView>
 			</View> 
