--- a/app/views/m_myClaim.xml
+++ b/app/views/m_myClaim.xml
@@ -10,7 +10,7 @@
 		        <ActivityIndicator  id="activityIndicator" />
 		    	<Label top="5" text="Loading" color="#ffffff" />
 		    </View>
-			<ScrollView id="main" layout="vertical">
+			<ScrollView id="main" layout="vertical" scrollType="vertical">
 				<Label id="date"></Label>
 				<View left="10" right="10" top="10" bottom="10" height="Ti.UI.SIZE" width="Ti.UI.FILL">
 					<View borderColor="#000000" width="Ti.UI.FILL" height="Ti.UI.SIZE" layout="vertical">
@@ -18,7 +18,7 @@
 							<Label class="title"  color="#ffffff">Claims Balance</Label>
 						</View>
 						<View class="line"></View>
-						<Label class="padding" wordWrap="false" ellipsize="true">KHAIRIL AZMY BIN MOHD AMINUDDIN</Label>
+						<Label class="padding" wordWrap="false" id="principleName" ellipsize="true">KHAIRIL AZMY BIN MOHD AMINUDDIN</Label>
 						 
 						<View width="Ti.UI.FILL" height="Ti.UI.SIZE" layout="horizontal">
 							<Label class="subtitle">GP/OUT-PATIENT</Label><Label class="subvalue">RM1000</Label>
