--- a/app/views/healthProfile.xml
+++ b/app/views/healthProfile.xml
@@ -12,21 +12,21 @@
 			<TableView id="table" height="135" top="30" scrollable="false">
 				<TableViewRow id="tvrFieldDate" selectedBackgroundColor="#ffffff"  onClick="showDatePicker">
 					<View  layout="horizontal" height="45" width="100%" textAlign="right" >
-						<Label text="Birthdate" top=12 width="40%" class="title_Label"  />
-						<Label text="" top=12 color="#707070" id="date_value" textAlign="right" width="50%"  />
+						<Label text="Birthdate" top="12" width="40%" class="title_Label"  />
+						<Label text="" top="12" color="#707070" id="date_value" textAlign="right" width="50%"  />
 					</View>
 				</TableViewRow>
 				 
 				<TableViewRow id="tvrFieldGender" selectedBackgroundColor="#ffffff"   onClick="showGenderPicker">
 					<View  layout="horizontal" height="45" width="100%" >
-						<Label text="Gender" width="40%" top=12 class="title_Label"  />
-						<Label text="" top=12 color="#707070" id="gender_value" textAlign="right" width="50%"   />
+						<Label text="Gender" width="40%" top="12" class="title_Label"  />
+						<Label text="" top="12" color="#707070" id="gender_value" textAlign="right" width="50%"   />
 					</View>
 				</TableViewRow>
 				<TableViewRow id="tvrFieldBloodType" selectedBackgroundColor="#ffffff"  onClick="showBloodTypePicker">
 					<View  layout="horizontal" height="45" width="100%" >
-						<Label text="BloodType" width="40%" top=12 class="title_Label" />
-						<Label text="" top=12 color="#707070" id="bloodType_value" textAlign="right" width="50%"  />
+						<Label text="BloodType" width="40%" top="12" class="title_Label" />
+						<Label text="" top="12" color="#707070" id="bloodType_value" textAlign="right" width="50%"  />
 					</View>
 				</TableViewRow>
 			</TableView>
