--- a/app/views/m_myHealth.xml
+++ b/app/views/m_myHealth.xml
@@ -23,27 +23,27 @@
 				<ScrollView id="graphScrollView" layout="vertical" height="100%" width="100%" >
 					<View id="bmiView" height="0"   width="100%" backgroundColor="#EBEBEB" visible="false">
 						<WebView id="bmiWebView" width="100%" backgroundColor="#EBEBEB" url="/html/bmi.html" disableBounce='true' touchEnabled="false"  ></WebView>
-						<View height="1" bottom=0 backgroundColor="#FC7474" width="100%" />
+						<View height="1" bottom="0" backgroundColor="#FC7474" width="100%" />
 					</View>
 					
 					<View id="bloodPressureView"  height="0" width="100%" backgroundColor="#EBEBEB" visible="false">
 						<WebView width="100%" backgroundColor="#EBEBEB" url="/html/bloodPressure.html" disableBounce='true' touchEnabled="false"></WebView>
-						<View height="1" bottom=0 backgroundColor="#FC7474" width="100%" />
+						<View height="1" bottom="0" backgroundColor="#FC7474" width="100%" />
 					</View>
 					
 					<View id="heartRateView" height="0"  width="100%" backgroundColor="#EBEBEB" visible="false">
 						<WebView  width="100%" backgroundColor="#EBEBEB" url="/html/heartRate.html" disableBounce='true' touchEnabled="false" ></WebView>
-						<View height="1" bottom=0 backgroundColor="#FC7474" width="100%" />
+						<View height="1" bottom="0" backgroundColor="#FC7474" width="100%" />
 					</View>
 					
 					<View id="bodyTemperatureView" height="0"  width="100%" backgroundColor="#EBEBEB" visible="false">
 						<WebView  width="100%" backgroundColor="#EBEBEB" url="/html/bodyTemperature.html" disableBounce='true' touchEnabled="false"></WebView>
-						<View height="1" bottom=0 backgroundColor="#FC7474" width="100%" />
+						<View height="1" bottom="0" backgroundColor="#FC7474" width="100%" />
 					</View>
 					
 					<View id="heightView" height="0"  width="100%" backgroundColor="#EBEBEB" visible="false">
 						<WebView  width="100%" backgroundColor="#EBEBEB" url="/html/height.html" disableBounce='true' touchEnabled="false"></WebView>
-						<View height="1" bottom=0 backgroundColor="#FC7474" width="100%" />
+						<View height="1" bottom="0" backgroundColor="#FC7474" width="100%" />
 					</View>
 					
 					<View id="weightView" height="0"  width="100%" backgroundColor="#EBEBEB" visible="false">
