--- a/app/views/m_myClaim.xml
+++ b/app/views/m_myClaim.xml
@@ -13,40 +13,8 @@
 			<ScrollView id="main" layout="vertical" scrollType="vertical">
 				<Label id="date"></Label>
 				<View left="10" right="10" top="10" bottom="10" height="Ti.UI.SIZE" width="Ti.UI.FILL">
-					<View borderColor="#000000" width="Ti.UI.FILL" height="Ti.UI.SIZE" layout="vertical">
-						<View backgroundColor="#CE1D1C" height="Ti.UI.SIZE" width="Ti.UI.FILL">
-							<Label class="title"  color="#ffffff">Claims Balance</Label>
-						</View>
-						<View class="line"></View>
-						<Label class="padding" wordWrap="false" id="principleName" ellipsize="true">KHAIRIL AZMY BIN MOHD AMINUDDIN</Label>
-						 
-						<View width="Ti.UI.FILL" height="Ti.UI.SIZE" layout="horizontal">
-							<Label class="subtitle">GP/OUT-PATIENT</Label><Label class="subvalue">RM1000</Label>
-						</View>
-						<View width="Ti.UI.FILL" height="Ti.UI.SIZE" layout="horizontal">
-							<Label class="subtitle">DENTAL</Label><Label class="subvalue" >RM500</Label>
-						</View>
-						<View backgroundColor="#CE1D1C" height="Ti.UI.SIZE" width="Ti.UI.FILL">
-							<Label class="title" color="#ffffff">Claims Shared Balance</Label>
-						</View>
-						<View class="line"></View>
-						<Label class="padding" wordWrap="false" ellipsize="true">ELEESYA SOFE</Label>
-						 
-						<View width="Ti.UI.FILL" height="Ti.UI.SIZE" layout="horizontal">
-							<Label class="subtitle">GP/OUT-PATIENT</Label><Label class="subvalue">RM500</Label>
-						</View>
-						<View class="line"></View>
-						<Label class="padding" wordWrap="false" ellipsize="true">MUHAMMAD IMRAN</Label>
-						 
-						<View width="Ti.UI.FILL" height="Ti.UI.SIZE" layout="horizontal">
-							<Label class="subtitle">GP/OUT-PATIENT</Label><Label class="subvalue">RM500</Label>
-						</View>
-						<View class="line"></View>
-						<Label class="padding" wordWrap="false" ellipsize="true">ZETI AZRI ZAMBAHARI</Label>
-						 
-						<View width="Ti.UI.FILL" height="Ti.UI.SIZE" layout="horizontal">
-							<Label class="subtitle">GP/OUT-PATIENT</Label><Label class="subvalue">RM500</Label>
-						</View>
+					<View borderColor="#000000" width="Ti.UI.FILL" height="Ti.UI.SIZE" layout="vertical" id="view_balance">
+						
 					</View>
 				</View>
 			</ScrollView>
