--- a/app/views/login.xml
+++ b/app/views/login.xml
@@ -7,8 +7,8 @@
 		    </View>
 			<ScrollView id="main" layout="vertical" height="95%">
 				<ImageView width="50%" height="Ti.UI.SIZE" backgroundColor="#ff0000" bottom="50dp" top="50dp" image="appicon-76@2x.png"></ImageView>
-				<TextField id="username" hintText="Enter Username" value="asplux@corpdemo.com" />
-				<TextField id="password" hintText="Enter Password" value="asplux123" />
+				<TextField id="username" hintText="Enter Username" value="" /><!--asplux@corpdemo.com -->
+				<TextField id="password" hintText="Enter Password" value="" /><!--asplux123 -->
 				<Button id="loginAccountButton" borderRadius="15" backgroundColor="#CC2228" onTouchend="doLogin" title="Login"  width="90%" top="20" height="60" color="#ffffff" />
 				 
 			</ScrollView>
