--- a/app/views/login.xml
+++ b/app/views/login.xml
@@ -1,24 +1,25 @@
 <Alloy>
-	<Window navTintColor="#CE1D1C" id="login" title="Login" id="loginWin" class="container">
+	<Window navTintColor="#CE1D1C" id="login" title="Login" id="loginWin" class="container" layout="vertical">
 		<View>
         	<View layout="vertical" id="loadingBar" height="0" width="120" borderRadius="15"  backgroundColor="#2E2E2E" >
 		        <ActivityIndicator  id="activityIndicator" />
 		    	<Label top="5" text="Loading" color="#ffffff" />
 		    </View>
-			<ScrollView id="main" layout="vertical" height="95%">
+			<ScrollView id="main" layout="vertical" height="100%" contentHeight="Ti.UI.SIZE">
 				<ImageView width="50%" height="Ti.UI.SIZE" backgroundColor="#ff0000" bottom="50dp" top="50dp" image="appicon-76@2x.png"></ImageView>
 				<TextField id="username" hintText="Enter Username" value="asplux@corpdemo.com" />
 				<TextField id="password" hintText="Enter Password" value="asplux123" />
-				<Button id="loginAccountButton" borderRadius="15" backgroundColor="#CC2228" onTouchend="doLogin" title="Login"  width="90%" top="20" height="60" color="#ffffff" />
+				<Button id="loginAccountButton" borderRadius="15" backgroundColor="#CC2228" onTouchend="doLogin" title="Login" width="90%" top="20" height="50" color="#ffffff" />
+				<!--<Button id="registerButton" borderRadius="15" backgroundColor="rbg(62,151,82)" onTouchend="doRegister" title="Register"  width="90%" top="10" height="50" color="#ffffff" />-->
 				 
 			</ScrollView>
-		</View>
-		<View id="footer" layout="horizontal">
+		</View><!--
+		<View height="5%" id="footer" layout="horizontal" verticalAlign="middle">
 			 <Label class="ftText">ASPplux</Label>
 			 <Label class="ftText">|</Label>
 			 <Label class="ftText">Privacy & Terms</Label>
 			 <Label class="ftText">|</Label>
 			 <Label class="ftText">Help</Label>
-		</View>
+		</View>-->
 	</Window>
 </Alloy>
