--- a/app/views/m_workout.xml
+++ b/app/views/m_workout.xml
@@ -1,7 +1,10 @@
 <Alloy>
 	<Window title="Workout Record" backButtonTitle="" class="container" navTintColor="#CE1D1C" platform="ios">
-		<View id="main">
-			<ImageView width="100%" height="100%" image="/dummy/dummy-home.jpg"/>
+		<View id="main" width="Ti.UI.FILL"  >
+		  <Label id="myText" width="Ti.UI.SIZE" />
+		  <View id="button" width="Ti.UI.SIZE" >
+		 
+			</View>
 		</View>
 	</Window>
 </Alloy>
