--- a/app/views/home.xml
+++ b/app/views/home.xml
@@ -6,7 +6,7 @@
 				<View layout="">
 					<ImageView id="logo" width="100" height="100" top="10" left="10" image="/appicon-60@3x.png" zIndex="5" />
 					<View zIndex="4" id="myinfo_view" layout="horizontal" height="Ti.UI.SIZE" top="20" backgroundColor="rgba(0,0,0,0.5)"> 
-						<View height="40" id="fbloginView" />
+						<!--<View height="40" id="fbloginView" />-->
 						<View layout="horizontal" left="110" width="auto" top="10" bottom="10" height="Ti.UI.SIZE" id="myInfo" />
 					</View>
 					<View layout="vertical" id="loadingBar" height="0" width="120" borderRadius="15" top="0" opacity="0" backgroundColor="#2E2E2E" >
