--- a/app/views/signup.xml
+++ b/app/views/signup.xml
@@ -1,16 +1,18 @@
 <Alloy>
-	<Window navTintColor="#CE1D1C" id="login" title="Plux Signup" id="loginWin" class="container" layout="vertical">
+	<Window navTintColor="#CE1D1C" id="login" title="Plux Signup" id="signUpWin" class="container" layout="vertical">
 		<View>
         	<View layout="vertical" id="loadingBar" height="0" width="120" borderRadius="15" backgroundColor="#2E2E2E" >
 		        <ActivityIndicator id="activityIndicator" />
 		    	<Label top="5" text="Loading" color="#ffffff" />
 		    </View>
 			<ScrollView id="main" layout="vertical" height="100%" contentHeight="Ti.UI.SIZE">
-				<ImageView width="50%" height="Ti.UI.SIZE" backgroundColor="#ff0000" bottom="20dp" top="20dp" image="appicon-76@2x.png"></ImageView>
+				<ImageView width="30%" height="Ti.UI.SIZE" backgroundColor="#ff0000" bottom="10dp" top="10dp" image="appicon-76@2x.png"></ImageView>
+				<TextField class="text_input" id="fullname" hintText="Enter Full Name" value="George Lim" /><!-- wongbh@live.com -->
 				<TextField class="text_input" id="email" hintText="Enter Email" value="wongbh@live.com" /><!-- wongbh@live.com -->
-				<TextField id="password" hintText="Enter Password" value="12345678" /><!--12345678 -->
+				<TextField id="password" hintText="Enter Password" value="12345678" />
+				<TextField id="confirm" hintText="Enter Confirm Password" value="12345678" /><!--12345678 -->
 				<View id="tc_area" layout="vertical" height="Ti.UI.SIZE" width="Ti.UI.FILL"></View>
-				<Button id="sign_btn" onClick="doSignup" borderRadius="15" backgroundColor="#CC2228" title="Sign Up"  width="90%" top="20" height="60" bottom="20" color="#ffffff" />
+				<Button id="sign_btn" onClick="doSignup" borderRadius="15" backgroundColor="#CC2228" title="Sign Up"  width="60%" top="20" height="60" bottom="20" color="#ffffff" />
 			</ScrollView>
 		</View><!--
 		<View height="5%" id="footer" layout="horizontal" verticalAlign="middle">
