--- a/app/views/login.xml
+++ b/app/views/login.xml
@@ -14,9 +14,10 @@
 				<ImageView width="40%" height="Ti.UI.SIZE" backgroundColor="#ff0000" bottom="30dp" top="30dp" image="appicon-76@2x.png"></ImageView>
 				<TextField id="email" hintText="Enter Email" value="" /><!--asplux@corpdemo.com -->
 				<TextField id="password" hintText="Enter Password" value="" /><!--asplux123 -->
-				<Button id="loginAccountButton" borderRadius="15" backgroundColor="#CC2228" onTouchend="doLogin" title="Login"  width="60%" top="20" height="60" color="#ffffff" />
+				<Button id="loginAccountButton" borderRadius="5" backgroundColor="#CC2228" onTouchend="doLogin" title="Login"  width="70%" top="20" height="40" color="#ffffff" />
 				<View height="60" id="fbloginView" width="70%" />
-				<Label height="Ti.UI.SIZE" id="doSignup" top="10">Register</Label>
+				<Button id="registerAccountButton" borderRadius="5" backgroundColor="#9A5705" onTouchend="doSignup" title="Register"  width="70%" top="5" height="40" color="#ffffff" />
+				
 			</ScrollView>
 		</View><!--
 		<View height="5%" id="footer" layout="horizontal" verticalAlign="middle">
