add clinic Type page

--- a/app/views/hra_detail.xml
+++ b/app/views/hra_detail.xml
@@ -1,5 +1,5 @@
 <Alloy>
-	<Window title="" backButtonTitle="" id="win" class="container" navTintColor="#CE1D1C" platform="ios">
+	<Window title="" backButtonTitle="" id="hraDetailsWin" class="container" navTintColor="#CE1D1C" platform="ios">
 		<ScrollView height="Ti.UI.FILL" width="Ti.UI.FILL" contentHeight="Ti.UI.SIZE" contentWidth="Ti.UI.FILL" layout="vertical" >
 			<View id="input_box" height="Ti.UI.SIZE"></View>
 			<View id="description" height="Ti.UI.SIZE"></View>
