--- a/app/views/home.xml
+++ b/app/views/home.xml
@@ -5,7 +5,7 @@
 				<View id="daily_background" width="Ti.UI.FILL" height="Ti.UI.FILL"></View>
 				<View layout="">
 					<ImageView id="logo" borderRadius="10" width="100" height="100" top="10" left="10" image="/appicon-60@3x.png" zIndex="5" />
-					<View zIndex="4" id="myinfo_view" layout="horizontal" height="Ti.UI.SIZE" top="20" backgroundColor="rgba(0,0,0,0.5)"> 
+					<View zIndex="4" id="myinfo_view" layout="horizontal" height="Ti.UI.SIZE" top="20" backgroundColor="#666666" opacity="0.7"> 
 						<!--<View height="40" id="fbloginView" />-->
 						<View layout="horizontal" left="110" width="auto" top="10" bottom="10" height="Ti.UI.SIZE" id="myInfo" />
 					</View>
@@ -20,7 +20,7 @@
 							<ImageView onClick="navWindow" mod="myHealth" left="15" top="15" width="139" image="/images/btn/btn_my_health.png"/>
 							<ImageView onClick="navWindow" mod="myClaim" top="15" width="139" image="/images/btn/btn_my_claim_detail.png"/>
 							<ImageView onClick="navWindow" mod="profile" top="15" left="15" width="139" image="/images/btn/btn_profile.png"/>
-							<ImageView onClick="navWindow" mod="healthInfo" top="15" width="139" image="/images/btn/btn_healthInfo.png"/>
+							<!--<ImageView onClick="navWindow" mod="healthInfo" top="15" width="139" image="/images/btn/btn_healthInfo.png"/>-->
 							<ImageView onClick="navWindow" mod="leaflet" left="15" top="15" width="139" image="/images/btn/btn_leaflet.png"/>
 							<ImageView onClick="navWindow" mod="myMedicalRecord" top="15" width="139" image="/images/btn/btn_my_medical_record.png"/>
 							<ImageView onClick="navWindow" mod="clinicLocator" left="15" top="15" width="139" image="/images/btn/btn_clinic_location.png"/>
